precised dev repository

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "require": {
         "yiisoft/yii2": "^2.0.20",
         "bower-asset/codemirror": "@stable",
-        "bower-asset/summernote": "0.* | dev-*"
+        "bower-asset/summernote": "0.* | dev-develop"
     },
     "require-dev": {
         "aws/aws-sdk-php": "^3.148.0",
