--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "require": {
         "yiisoft/yii2": "^2.0.20",
         "bower-asset/codemirror": "@stable",
-        "bower-asset/summernote": "0.* | dev-develop"
+        "bower-asset/summernote": "^0.8.20"
     },
     "require-dev": {
         "aws/aws-sdk-php": "^3.148.0",
@@ -48,6 +48,12 @@
     "suggest": {
         "aws/aws-sdk-php": "Needed if you like to use upload on Amazon S3"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "marqu3s\\summernote\\": "src"
@@ -57,6 +63,11 @@
         "asset-installer-paths": {
             "npm-asset-library": "vendor/npm",
             "bower-asset-library": "vendor/bower"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
         }
     }
 }
