--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "source": "https://github.com/simialbi/yii2-summernote"
     },
     "require": {
+        "php": ">=7.3",
         "yiisoft/yii2": "^2.0.20",
         "bower-asset/codemirror": "@stable",
         "bower-asset/summernote": "^0.8.20"
